<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/action_bar_container"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?actionBarSize">
        <ImageView
            android:id="@+id/image_logo"
            android:layout_marginStart="8sp"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16sp"
            android:layout_toEndOf="@id/image_logo"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_user"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/user"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar_container"
        app:shapeAppearanceOverlay="@style/ShapeImageViewCircle" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/img_user"
        app:layout_constraintStart_toStartOf="@id/img_user"
        app:layout_constraintTop_toBottomOf="@id/img_user"
        tools:text="Martha Hays" />


    <LinearLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            />

        <TextView
            android:id="@+id/tv_change_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:padding="4dp"
            android:text="@string/change_account_name"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_change_image_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/change_image"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_camera" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/app_name" />


        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/contact_us"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_flash" />

        <TextView
            android:id="@+id/tv_support_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:padding="4dp"
            android:text="@string/support_us"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_like" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>